# bdd-object-detection

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  dashboard.py  docker-compose.yml  pyproject.toml  requirements-analysis.txt  requirements-dev.txt  requirements.txt  run_analysis.py
data/: __init__.py  config.py  dataset.py  parser.py
data_analysis/: __init__.py  analysis.py  dashboard.py  run_analysis.py  visualize.py
docs/: DATA_ANALYSIS.md  EVALUATION.md  MODEL.md
evaluation/: __init__.py  eval_rf_detr.py  evaluate.py  failure_analysis_fiftyone.py  run_eval.py  visualize.py
training_faster_rcnn/: __init__.py  model.py  train.py
training_rf_detr/: __init__.py  plot_training.py  prepare_dataset.py  setup_conda.sh  train.py
